--- a/documents.html
+++ b/documents.html
@@ -85,12 +85,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe,
-            having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is
-            no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's
-            earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
 
-          <h2 class="section-heading">Download slides</h2>
+          <h2 class="section-heading">Download Documents</h2>
 
           <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task
             to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
@@ -106,21 +102,121 @@
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
+                <th scope="row">1.0</th>
+                <td>Project Pre Assessment</td>
+                <td>20-01-2017</td>
                 <td>
-                  <a href="./img/about-bg.jpg" download> Download </a>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BwfWKG6eNHMXRlRIemg3TWlIOVU"> Download </a>
                 </td>
               </tr>
               <tr>
-                <td colspan="3" style="font-weight: bold">PPR Documents</td>
+                <th scope="row">2.0</th>
+                <td>Project Charter</td>
+                <td>20-01-2017</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BzAMzOgq1BXzVGlzQWpiRk9ySk0"> Download </a>
+                </td>
               </tr>
               <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
+                <th scope="row">3.0</th>
+                <td>Project Proposal</td>
+                <td>20-01-2017</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BzAMzOgq1BXzTnNCUDdKSUp6V0k"> Download </a>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="3" style="font-weight: bold">Preliminary Progress Review Documents</td>
+              </tr>
+              <tr>
+                <th scope="row">4.1</th>
+                <td>PPR - Corpus Pre Processing</td>
+                <td>20-01-2017</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BzAMzOgq1BXzTDYtUDdLVVVqS1U"> Download </a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">4.2</th>
+                <td>PPR - Deep Neural Network for Answer Extraction</td>
+                <td>20-01-2017</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BzAMzOgq1BXzUUo4RFlyMHRuUHM"> Download </a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">4.3</th>
+                <td>PPR - Question Pre Processing</td>
+                <td>20-01-2017</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BzAMzOgq1BXzQTU0aWY2SmRhZDA"> Download </a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">4.4</th>
+                <td>Answer Generation</td>
+                <td>20-01-2017</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BzAMzOgq1BXzeHBiU3AwWEF2Ym8"> Download </a>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="3" style="font-weight: bold">Final Reports</td>
+              </tr>
+              <tr>
+                <th scope="row">5.1</th>
+                <td>Corpus Pre Processing</td>
+                <td>20-01-2017</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BzAMzOgq1BXzaE5nbUk1Y0ZEUnM"> Download </a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">5.2</th>
+                <td>Deep Neural Network for Answer Extraction</td>
+                <td>20-01-2017</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BzAMzOgq1BXzNGkyZGRlbFBJSWs"> Download </a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">5.3</th>
+                <td>Question Pre Processing</td>
+                <td>20-01-2017</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BzAMzOgq1BXzZzlsM01lTHNuOWs"> Download </a>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">5.4</th>
+                <td>Answer Generation</td>
+                <td>20-01-2017</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BzAMzOgq1BXzOXVjR2JITHBidm8"> Download </a>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="3" style="font-weight: bold">Research Paper</td>
+              </tr>
+              <tr>
+                <th scope="row">6.0</th>
+                <td>Research Paper</td>
+                <td>20-01-2017</td>
+                <td>
+                  <a target="_blank" href="https://drive.google.com/
+                  open?id=0BzAMzOgq1BXzMDhwUDU1U2JXN2c"> Download </a>
+                </td>
               </tr>
             </tbody>
           </table>
