--- a/documents.html
+++ b/documents.html
@@ -22,6 +22,7 @@
   <!-- Custom styles for this template -->
   <link href="css/clean-blog.min.css" rel="stylesheet">
 
+  <link rel='shortcut icon' type='image/x-icon' href='./img/favicon.ico'>
 </head>
 
 <body>
