Update document date

--- a/documents.html
+++ b/documents.html
@@ -89,15 +89,12 @@
 
           <h2 class="section-heading">Download Documents</h2>
 
-          <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task
-            to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-
           <table class="table">
             <thead class="thead-inverse">
               <tr>
                 <th>#</th>
                 <th>Title</th>
-                <th>Date</th>
+                <th style="width: 7em;">Date</th>
                 <th>Link</th>
               </tr>
             </thead>
@@ -105,7 +102,7 @@
               <tr>
                 <th scope="row">1.0</th>
                 <td>Project Pre Assessment</td>
-                <td>20-01-2017</td>
+                <td>13-02-2017</td>
                 <td>
                   <a target="_blank" href="https://drive.google.com/
                   open?id=0BwfWKG6eNHMXRlRIemg3TWlIOVU"> Download </a>
@@ -114,7 +111,7 @@
               <tr>
                 <th scope="row">2.0</th>
                 <td>Project Charter</td>
-                <td>20-01-2017</td>
+                <td>07-03-2017</td>
                 <td>
                   <a target="_blank" href="https://drive.google.com/
                   open?id=0BzAMzOgq1BXzVGlzQWpiRk9ySk0"> Download </a>
@@ -135,7 +132,7 @@
               <tr>
                 <th scope="row">4.1</th>
                 <td>Corpus Pre Processing</td>
-                <td>20-01-2017</td>
+                <td>02-05-2017</td>
                 <td>
                   <a target="_blank" href="https://drive.google.com/
                   open?id=0BzAMzOgq1BXzTDYtUDdLVVVqS1U"> Download </a>
@@ -144,7 +141,7 @@
               <tr>
                 <th scope="row">4.2</th>
                 <td>Deep Neural Network for Answer Extraction</td>
-                <td>20-01-2017</td>
+                <td>02-05-2017</td>
                 <td>
                   <a target="_blank" href="https://drive.google.com/
                   open?id=0BzAMzOgq1BXzUUo4RFlyMHRuUHM"> Download </a>
@@ -153,7 +150,7 @@
               <tr>
                 <th scope="row">4.3</th>
                 <td>Question Pre Processing</td>
-                <td>20-01-2017</td>
+                <td>02-05-2017</td>
                 <td>
                   <a target="_blank" href="https://drive.google.com/
                   open?id=0BzAMzOgq1BXzQTU0aWY2SmRhZDA"> Download </a>
@@ -162,7 +159,7 @@
               <tr>
                 <th scope="row">4.4</th>
                 <td>Answer Generation</td>
-                <td>20-01-2017</td>
+                <td>02-05-2017</td>
                 <td>
                   <a target="_blank" href="https://drive.google.com/
                   open?id=0BzAMzOgq1BXzeHBiU3AwWEF2Ym8"> Download </a>
@@ -174,7 +171,7 @@
               <tr>
                 <th scope="row">5.1</th>
                 <td>Corpus Pre Processing</td>
-                <td>20-01-2017</td>
+                <td>04-10-2017</td>
                 <td>
                   <a target="_blank" href="https://drive.google.com/
                   open?id=0BzAMzOgq1BXzaE5nbUk1Y0ZEUnM"> Download </a>
@@ -183,7 +180,7 @@
               <tr>
                 <th scope="row">5.2</th>
                 <td>Deep Neural Network for Answer Extraction</td>
-                <td>20-01-2017</td>
+                <td>04-10-2017</td>
                 <td>
                   <a target="_blank" href="https://drive.google.com/
                   open?id=0BzAMzOgq1BXzNGkyZGRlbFBJSWs"> Download </a>
@@ -192,7 +189,7 @@
               <tr>
                 <th scope="row">5.3</th>
                 <td>Question Pre Processing</td>
-                <td>20-01-2017</td>
+                <td>04-10-2017</td>
                 <td>
                   <a target="_blank" href="https://drive.google.com/
                   open?id=0BzAMzOgq1BXzZzlsM01lTHNuOWs"> Download </a>
@@ -201,7 +198,7 @@
               <tr>
                 <th scope="row">5.4</th>
                 <td>Answer Generation</td>
-                <td>20-01-2017</td>
+                <td>04-10-2017</td>
                 <td>
                   <a target="_blank" href="https://drive.google.com/
                   open?id=0BzAMzOgq1BXzOXVjR2JITHBidm8"> Download </a>
@@ -222,11 +219,6 @@
             </tbody>
           </table>
 
-          <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of tomorrow. Science has not yet mastered prophecy.
-            We predict too much for the next year and yet far too little for the next ten.</blockquote>
-          <p>Placeholder text by
-            <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
-            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
         </div>
       </div>
     </div>
