--- a/milestones.html
+++ b/milestones.html
@@ -216,7 +216,7 @@
                
 
                 <span class="timeline-label">
-                    <button class="btn btn-danger"><i class="fa fa-ambulance"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-star-o"></i></button>
                 </span>
             </div>
         <!-- </div> -->
