--- a/slides.html
+++ b/slides.html
@@ -87,6 +87,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
 
+          <h2 class="section-heading">Download Slides</h2>
+
           <table class="table">
             <thead class="thead-inverse">
               <tr>
