--- a/research-objectives.html
+++ b/research-objectives.html
@@ -65,7 +65,8 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/post-bg.jpg')">
+  <header class="masthead" style="background: linear-gradient(rgba(0, 0, 0, 0.6),
+  rgba(0, 0, 0, 0.6)), url('img/domain-sub-bg.jpg'); background-size: cover;">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
