--- a/slides.html
+++ b/slides.html
@@ -65,7 +65,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/post-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/presentation.png')">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
