Change contact us

--- a/contact.html
+++ b/contact.html
@@ -65,12 +65,13 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
+  <header class="masthead" style="background: linear-gradient(rgba(0, 0, 0, 0.6),
+  rgba(0, 0, 0, 0.6)), url('img/contact-bg.jpg'); background-size: cover;">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>Contact Me</h1>
+            <h1>Contact Us</h1>
             <span class="subheading">Have questions? I have answers (maybe).</span>
           </div>
         </div>
