--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>Contact Us</h1>
-            <span class="subheading">Have questions? I have answers (maybe).</span>
+            <span class="subheading">Have questions? We have answers (maybe).</span>
           </div>
         </div>
       </div>
