--- a/litreature-survey.html
+++ b/litreature-survey.html
@@ -192,7 +192,7 @@
                 </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2017</p>
+          <p class="copyright text-muted">Copyright &copy; Team Entropy 2017</p>
         </div>
       </div>
     </div>
