--- a/methodologies.html
+++ b/methodologies.html
@@ -389,7 +389,7 @@
                 </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2017</p>
+          <p class="copyright text-muted">Copyright &copy; Team Entropy 2017</p>
         </div>
       </div>
     </div>
