--- a/slides.html
+++ b/slides.html
@@ -163,7 +163,7 @@
                 </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2017</p>
+          <p class="copyright text-muted">Copyright &copy; Team Entropy 2017</p>
         </div>
       </div>
     </div>
