Update home page

--- a/index.html
+++ b/index.html
@@ -82,35 +82,51 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Services</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading">Solutions Partner</h2>
+            <h3 class="section-subheading text-muted">We build unique, powerful solutions to power your business based on Deep Learning</h3>
           </div>
         </div>
         <div class="row text-center">
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-circle fa-stack-2x" style="color: #888888!important"></i>
+              <i class="fa fa-comments-o fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">E-Commerce</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Question Answer</h4>
+            <p class="text-muted">Our unique approach to the Question Answer domain will help power your business needs. Find unique ways to communicate with your customers and provide them a different experience.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-circle fa-stack-2x" style="color: #888888!important"></i>
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Responsive Design</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">White Labeled Applications</h4>
+            <p class="text-muted">We provide white labeled web and mobile applications so that you can provide the best experience to your users.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-circle fa-stack-2x" style="color: #888888!important"></i>
+              <i class="fa fa-cloud fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Web Security</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Cloud Enabled</h4>
+            <p class="text-muted">Cloud enabled from the ground up, we use the latest technologies from Amazon and Google to provide the best state of the art infrastructure.</p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="technologies" style="background: #888888; color:beige">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">Technologies</h2>
+            <h3 class="section-subheading">State of the art deep learning technologies</h3>
+          </div>
+        </div>
+        <div class="row text-center" style="text-align:center;">
+          <span>
+            <img class="center-block" src="img/seq-model.png" alt="">
+          </span>
         </div>
       </div>
     </section>
