--- a/documents.html
+++ b/documents.html
@@ -104,8 +104,7 @@
                 <td>Project Pre Assessment</td>
                 <td>13-02-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BwfWKG6eNHMXRlRIemg3TWlIOVU"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BwfWKG6eNHMXRlRIemg3TWlIOVU"> Download </a>
                 </td>
               </tr>
               <tr>
@@ -113,8 +112,7 @@
                 <td>Project Charter</td>
                 <td>07-03-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BzAMzOgq1BXzVGlzQWpiRk9ySk0"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BzAMzOgq1BXzVGlzQWpiRk9ySk0"> Download </a>
                 </td>
               </tr>
               <tr>
@@ -122,8 +120,7 @@
                 <td>Project Proposal</td>
                 <td>27-03-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BzAMzOgq1BXzTnNCUDdKSUp6V0k"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BzAMzOgq1BXzTnNCUDdKSUp6V0k"> Download </a>
                 </td>
               </tr>
               <tr>
@@ -134,8 +131,7 @@
                 <td>Corpus Pre Processing</td>
                 <td>02-05-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BzAMzOgq1BXzTDYtUDdLVVVqS1U"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BzAMzOgq1BXzTDYtUDdLVVVqS1U"> Download </a>
                 </td>
               </tr>
               <tr>
@@ -143,8 +139,7 @@
                 <td>Deep Neural Network for Answer Extraction</td>
                 <td>02-05-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BzAMzOgq1BXzUUo4RFlyMHRuUHM"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BzAMzOgq1BXzUUo4RFlyMHRuUHM"> Download </a>
                 </td>
               </tr>
               <tr>
@@ -152,8 +147,7 @@
                 <td>Question Pre Processing</td>
                 <td>02-05-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BzAMzOgq1BXzQTU0aWY2SmRhZDA"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BzAMzOgq1BXzQTU0aWY2SmRhZDA"> Download </a>
                 </td>
               </tr>
               <tr>
@@ -161,8 +155,7 @@
                 <td>Answer Generation</td>
                 <td>02-05-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BzAMzOgq1BXzeHBiU3AwWEF2Ym8"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BzAMzOgq1BXzeHBiU3AwWEF2Ym8"> Download </a>
                 </td>
               </tr>
               <tr>
@@ -173,8 +166,7 @@
                 <td>Group Final Report</td>
                 <td>04-10-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BzAMzOgq1BXza0RDY2lBZFVPNTA"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BzAMzOgq1BXza0RDY2lBZFVPNTA"> Download </a>
                 </td>
               </tr>
               <tr>
@@ -182,8 +174,7 @@
                 <td>Corpus Pre Processing</td>
                 <td>04-10-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BzAMzOgq1BXzaE5nbUk1Y0ZEUnM"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BzAMzOgq1BXzaE5nbUk1Y0ZEUnM"> Download </a>
                 </td>
               </tr>
               <tr>
@@ -200,8 +191,7 @@
                 <td>Question Pre Processing</td>
                 <td>04-10-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BzAMzOgq1BXzZzlsM01lTHNuOWs"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BzAMzOgq1BXzZzlsM01lTHNuOWs"> Download </a>
                 </td>
               </tr>
               <tr>
@@ -209,8 +199,7 @@
                 <td>Answer Generation</td>
                 <td>04-10-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BzAMzOgq1BXzOXVjR2JITHBidm8"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BzAMzOgq1BXzOXVjR2JITHBidm8"> Download </a>
                 </td>
               </tr>
               <tr>
@@ -221,8 +210,7 @@
                 <td>Research Paper</td>
                 <td>20-01-2017</td>
                 <td>
-                  <a target="_blank" href="https://drive.google.com/
-                  open?id=0BzAMzOgq1BXzMDhwUDU1U2JXN2c"> Download </a>
+                  <a target="_blank" href="https://drive.google.com/open?id=0BzAMzOgq1BXzMDhwUDU1U2JXN2c"> Download </a>
                 </td>
               </tr>
             </tbody>
