Add system design

--- a/research-objectives.html
+++ b/research-objectives.html
@@ -116,8 +116,10 @@
           <p>
             The overall system architecture would look something like what's shown below:
           </p>
-
-          Figure 2.0 System Architecture
+          <a href="#">
+              <img class="img-fluid" src="img/Architecture.png" alt="">
+            </a>
+          <span class="caption text-muted">System Architecture</span>
 
           <p style="text-align: justify">
             In order to achieve the main objective, we have broken it down into four different sub objectives. Each of these sub objectives
