--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
     <!-- Page Header -->
     <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+      <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
@@ -125,7 +126,7 @@
           <hr>
           <!-- Pager -->
           <div class="clearfix">
-            <a class="btn btn-secondary float-right" href="#">Older Posts &rarr;</a>
+            <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
           </div>
         </div>
       </div>
